--- a/Projects/Blog-Website/package.json
+++ b/Projects/Blog-Website/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "expresss": "0.0.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.7"
   }
 }
