--- a/GraphQL/graphql-basics/package.json
+++ b/GraphQL/graphql-basics/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.3.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "uuid": "^9.0.0"
   }
 }
