--- a/GraphQL/graphql-social-media/package.json
+++ b/GraphQL/graphql-social-media/package.json
@@ -15,10 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.3.2",
+    "@prisma/client": "^4.9.0",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
+    "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^6.0.0",
